--- a/.gitignore
+++ b/.gitignore
@@ -267,3 +267,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm,windows,python
+.idea/Problema-del-Viajante.iml
